; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_fs.c_uv_fs_stat.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_fs.c_uv_fs_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STAT = common dso_local global i32 0, align 4
@PATH = common dso_local global i32 0, align 4
@POST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_fs_stat(i32* %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* @STAT, align 4
  %11 = call i32 @INIT(i32 %10)
  %12 = load i32, i32* @PATH, align 4
  %13 = load i32, i32* @POST, align 4
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @INIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
